--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.8.4"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "prettier --write --ignore-unknown",
+    "src/schema.ts": "npx prisma generate"
   }
 }
