--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "husky": "^8.0.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.8",
@@ -36,8 +37,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
