--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "tsc",
     "start": "npm run compile && node ./dist/server.js",
-    "start:prod": "npm install && npm run compile && node ./dist/server.js",
+    "start:prod": "npm install && npm run start",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -17,15 +17,18 @@
     "node": "18.12.0"
   },
   "dependencies": {
-    "@apollo/server": "^4.0.3",
-    "@prisma/client": "^4.5.0",
+    "@prisma/client": "^4.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "graphql": "^16.6.0",
+    "express": "^4.18.2",
     "husky": "^8.0.1",
-    "pg": "^8.8.0",
+    "morgan": "^1.10.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint": "^8.26.0",
@@ -36,7 +39,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.1",
     "ts-node": "^10.9.1"
   },
   "lint-staged": {
