Add main to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "main": "./dist/server.js",
   "scripts": {
     "compile": "tsc",
     "start": "npm run compile && node ./dist/server.js",
