--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "main": "./dist/server.js",
   "scripts": {
-    "compile": "tsc",
-    "start": "npm run compile && node ./dist/server.js",
-    "start:prod": "npm install && npm run start",
+    "build": "npm i && tsc",
+    "start": "node ./dist/server.js",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -15,6 +14,9 @@
   "license": "ISC",
   "volta": {
     "npm": "8.19.2",
+    "node": "18.12.0"
+  },
+  "engines": {
     "node": "18.12.0"
   },
   "dependencies": {
