--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./dist/server.js",
   "scripts": {
-    "build": "npm i && tsc",
+    "build": "tsc",
     "start": "node ./dist/server.js",
     "prepare": "husky install"
   },
@@ -13,11 +13,12 @@
   "author": "tbecks",
   "license": "ISC",
   "volta": {
-    "npm": "8.19.2",
-    "node": "18.12.0"
+    "node": "18.12.0",
+    "npm": "8.19.2"
   },
   "engines": {
-    "node": "18.12.0"
+    "node": "18.x",
+    "npm": "8.x"
   },
   "dependencies": {
     "@prisma/client": "^4.6.1",
@@ -32,7 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^18.11.8",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
