Add back build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "./dist/server.js",
   "scripts": {
-    "start": "tsc && node ./dist/server.js",
+    "build": "tsc",
+    "start": "node ./dist/server.js",
+    "dev": "tsc && node ./dist/server.js",
     "prepare": "husky install"
   },
   "keywords": [],
