--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node ./dist/server.js",
     "dev": "tsc && node ./dist/server.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "tbecks",
@@ -36,6 +38,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@vitest/coverage-c8": "^0.25.3",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -45,7 +48,8 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vitest": "^0.25.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
