--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "ls && node ./dist/server.js",
+    "start": "ls dist && node ./dist/server.js",
     "dev": "tsc && node ./dist/server.js",
     "prepare": "husky install",
     "test": "vitest",
