Change module to commonjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["esnext"],
-    "module": "esnext",
-    "moduleResolution": "nodenext",
+    "module": "commonjs",
     "outDir": "dist",
     "rootDirs": ["src"],
     "skipLibCheck": true,
