--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "./dist/server.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/server.js",
