--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,15 @@
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "outDir": "dist",
-    "rootDirs": ["src"],
+    "rootDir": "src",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2020",
     "types": ["node"]
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
