--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "skipLibCheck": true,
