--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "npm": "8.x"
   },
   "dependencies": {
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "^4.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -46,8 +46,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
+    "playwright": "^1.28.1",
     "prettier": "^2.7.1",
-    "prisma": "^4.6.1",
+    "prisma": "^4.8.0",
     "ts-node": "^10.9.1",
     "vitest": "^0.25.3"
   },
