--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/server.js",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/src/server.js",
     "dev": "npx nodemon src/server.ts",
     "prepare": "husky install",
     "test": "vitest",
