--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "npm": "8.x"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "husky": "^8.0.1",
     "morgan": "^1.10.0",
+    "openai": "^3.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   },
@@ -49,7 +50,7 @@
     "nodemon": "^2.0.20",
     "playwright": "^1.28.1",
     "prettier": "^2.7.1",
-    "prisma": "^4.8.0",
+    "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "vitest": "^0.25.3"
   },
