--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2020",
-    "types": ["node"]
+    "target": "es2022",
+    "types": ["node"],
+    "lib": ["es2022"]
   }
 }
