--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
