--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
     "target": "es2022",
     "types": ["node"],
-    "lib": ["es2022"]
+    "lib": ["es2022"],
+    "experimentalDecorators": true
   }
 }
