--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "8.x"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.27",
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
