Update resolver to only get restaurants that have not been deleted

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 
 # https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=
+
+GOOGLE_API_KEY=
