--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "8.x"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.27",
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -47,8 +48,8 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
     "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.20",
-    "playwright": "^1.28.1",
+    "nodemon": "^2.0.21",
+    "playwright": "^1.31.2",
     "prettier": "^2.7.1",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
