--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky install",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "dbui": "npx prisma studio"
+    "dbui": "npx prisma studio",
+    "lint": "npx eslint ."
   },
   "author": "tbecks",
   "license": "ISC",
@@ -39,7 +40,8 @@
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "@vitest/coverage-c8": "^0.25.3",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
