--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.27",
     "@prisma/client": "^4.11.0",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "husky": "^8.0.1",
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
+    "qs": "^6.11.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   },
@@ -46,7 +48,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
     "lint-staged": "^13.0.3",
