--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "express": "^4.18.2",
     "husky": "^8.0.1",
     "morgan": "^1.10.0",
