--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "openai": "^3.2.1",
     "qs": "^6.11.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
