--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,17 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "lib": ["es2022"],
     "module": "commonjs",
     "outDir": "dist",
+    "resolveJsonModule": true,
     "rootDir": ".",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2022",
-    "types": ["node"],
-    "lib": ["es2022"],
-    "experimentalDecorators": true
+    "types": ["node"]
   }
 }
