--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "openai": "^3.2.1",
     "qs": "^6.11.1",
     "rimraf": "^4.4.1",
+    "sqlite3": "^5.1.6",
     "typescript": "^5.0.3",
     "winston": "^3.8.2"
   },
