--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "exponential-backoff": "^3.1.1",
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "morgan": "^1.10.0",
